# ng-video-lecture

./: .gitignore  Makefile  README.md  bigram.py  bigramv2.py  gpt_dev.ipynb  pyproject.toml  requirements.txt
